--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -95,7 +95,7 @@
     </fragment>
     <fragment
         android:id="@+id/inputOutputFragment"
-        android:name="com.example.project_myfit.fragment.inputoutput.InputOutputFragment"
+        android:name="com.example.project_myfit.fragment.input_output.InputOutputFragment"
         android:label=""
         tools:layout="@layout/fragment_input_output">
         <argument
