--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -75,7 +75,7 @@
                             android:layout_marginTop="@dimen/_4sdp"
                             android:layout_marginEnd="@dimen/_16sdp"
                             android:alpha="0.7"
-                            android:text="@string/all_clear"
+                            android:text="@string/delete_all"
                             android:textSize="@dimen/_8sdp"
                             app:layout_constraintBottom_toBottomOf="parent"
                             app:layout_constraintEnd_toEndOf="parent"
