--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -8,7 +8,7 @@
         android:layout_height="match_parent"
         android:background="?colorPrimary"
         android:orientation="vertical"
-        tools:context=".searchActivity.SearchActivity">
+        tools:context=".search_activity.SearchActivity">
 
         <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
