--- a/app/src/main/res/layout/fragment_recycle_bin_main.xml
+++ b/app/src/main/res/layout/fragment_recycle_bin_main.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".trash.trashMainFragment">
+        tools:context=".recycler_bin.fragment.RecycleBinMainFragment">
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/trashCategoryText"
