--- a/app/src/main/res/navigation/main_nav_graph.xml
+++ b/app/src/main/res/navigation/main_nav_graph.xml
@@ -120,7 +120,7 @@
     </fragment>
     <activity
         android:id="@+id/searchActivity"
-        android:name="com.example.project_myfit.searchActivity.SearchActivity"
+        android:name="com.example.project_myfit.search_activity.SearchActivity"
         tools:layout="@layout/activity_search"
         android:label="SearchActivity"/>
     <!--    Dialog-->
@@ -260,8 +260,8 @@
         android:label="ImageClearDialog" />
     <activity
         android:id="@+id/trashActivity"
-        android:name="com.example.project_myfit.trash.TrashActivity"
+        android:name="com.example.project_myfit.recycler_bin.RecycleBinActivity"
         android:label="activity_trash"
-        tools:layout="@layout/activity_trash" />
+        tools:layout="@layout/activity_recycle_bin" />
     <!--    Dialog-->
 </navigation>
