--- a/app/src/main/res/navigation/recycle_bin_nav_graph.xml
+++ b/app/src/main/res/navigation/recycle_bin_nav_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/recycle_bin_main"
-        android:name="com.example.project_myfit.trash.trashMainFragment"
+        android:name="com.example.project_myfit.recycler_bin.fragment.RecycleBinMainFragment"
         android:label="fragment_recycle_bin_main"
-        tools:layout="@layout/fragment_trash_main" />
+        tools:layout="@layout/fragment_recycle_bin_main" />
 </navigation>
