--- a/app/src/main/res/layout/activity_recycle_bin.xml
+++ b/app/src/main/res/layout/activity_recycle_bin.xml
@@ -7,7 +7,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".recycler_bin_activity.RecycleBinActivity">
+        tools:context=".recycle_bin_activity.RecycleBinActivity">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/trashAppBarLayout"
