xml 네임, 아이디, 뷰홀더 클래스명, 오토스크롤 리스너 클래스명 변경

--- a/app/src/main/res/layout/item_view_pager_recycler_view.xml
+++ b/app/src/main/res/layout/item_view_pager_recycler_view.xml
@@ -23,7 +23,7 @@
             tools:listitem="@layout/item_main_recycler_category" />
 
         <FrameLayout
-            android:id="@+id/itemSearchNoData"
+            android:id="@+id/itemViewPagerRecyclerViewNoResultLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginTop="@dimen/_4sdp"
