--- a/app/src/main/res/navigation/recycle_bin_nav_graph.xml
+++ b/app/src/main/res/navigation/recycle_bin_nav_graph.xml
@@ -3,10 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/trash_nav_gragh"
-    app:startDestination="@id/recycle_bin_main">
+    app:startDestination="@id/recycleBinMain">
 
     <fragment
-        android:id="@+id/recycle_bin_main"
+        android:id="@+id/recycleBinMain"
         android:name="com.example.project_myfit.recycle_bin_activity.fragment.main.RecycleBinMainFragment"
         android:label="fragment_recycle_bin_main"
         tools:layout="@layout/fragment_recycle_bin_main" />
