--- a/app/src/main/res/layout/action_mode_title.xml
+++ b/app/src/main/res/layout/action_mode_title.xml
@@ -16,7 +16,7 @@
             android:scaleY="0.9" />
 
         <com.google.android.material.textview.MaterialTextView
-            android:id="@+id/actionModeTitle"
+            android:id="@+id/actionModeTitleText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
