--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,6 +4,6 @@
     <color name="white">#FFFFFFFF</color>
     <color name="recycler_background">#FFF0F0F0</color>
     <color name="recycler_background_night">#FF282828</color>
-    <color name="go_button_color">#FFF8F8F8 </color>
-    <color name="go_button_color_night">#FF282828</color>
+    <color name="go_button_background">#FFF8F8F8 </color>
+    <color name="go_button_background_night">#FF282828</color>
 </resources>
