--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,8 +2,8 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-    <color name="recycler_background">#FFF0F0F0</color>
-    <color name="recycler_background_night">#FF282828</color>
-    <color name="go_button_background">#FFF8F8F8 </color>
-    <color name="go_button_background_night">#FF282828</color>
+    <color name="rv_background">#FFF0F0F0</color>
+    <color name="rv_background_night">#FF282828</color>
+    <color name="go_btn_background">#FFF8F8F8 </color>
+    <color name="go_btn_background_night">#FF282828</color>
 </resources>
