--- a/app/src/main/res/menu/menu_action_mode.xml
+++ b/app/src/main/res/menu/menu_action_mode.xml
@@ -2,18 +2,18 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/menuActionModeEdit"
+        android:id="@+id/menu_action_mode_edit"
         android:icon="@drawable/icon_edit"
-        android:title="@string/edit"
+        android:title="@string/menu_edit"
         app:showAsAction="always" />
     <item
-        android:id="@+id/menuActionModeMove"
+        android:id="@+id/menu_action_mode_move"
         android:icon="@drawable/icon_move"
-        android:title="@string/move"
+        android:title="@string/menu_move"
         app:showAsAction="always" />
     <item
-        android:id="@+id/menuActionModeDelete"
+        android:id="@+id/menu_action_mode_delete"
         android:icon="@drawable/icon_delete"
-        android:title="@string/delete"
+        android:title="@string/menu_delete"
         app:showAsAction="ifRoom" />
 </menu>
