--- a/app/src/main/res/menu/menu_list.xml
+++ b/app/src/main/res/menu/menu_list.xml
@@ -4,25 +4,25 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <item
-        android:id="@+id/menuListSearch"
+        android:id="@+id/menu_list_search"
         android:icon="@drawable/icon_search"
-        android:title="@string/search"
+        android:title="@string/menu_search"
         app:showAsAction="always" />
 
     <item
-        android:id="@+id/menuListFavorite"
+        android:id="@+id/menu_list_favorite"
         android:icon="@drawable/icon_favorite_border"
-        android:title="@string/favorite"
+        android:title="@string/menu_favorite"
         app:showAsAction="always" />
     <item
-        android:id="@+id/menuListViewType"
+        android:id="@+id/menu_list_view_type"
         android:icon="@drawable/icon_list"
-        android:title="@string/view_type"
+        android:title="@string/list_menu_view_type"
         app:showAsAction="always"
         tools:ignore="AlwaysShowAction" />
     <item
-        android:id="@+id/menuListPopup"
+        android:id="@+id/menu_list_popup"
         android:icon="@drawable/icon_popup_menu"
-        android:title="@string/menu"
+        android:title="@string/menu_menu"
         app:showAsAction="always" />
 </menu>
